--- a/Purchasing.Mvc/Views/Order/ReroutePurchaser.cshtml
+++ b/Purchasing.Mvc/Views/Order/ReroutePurchaser.cshtml
@@ -42,7 +42,7 @@
                     <label>Purchaser to Reroute to:</label><span>*</span>
                 </div>
                 <div class="editor-field">                                      
-                    @this.Select("PurchaserId").Options(Model.PurchaserPeeps, x => x.Id, x => x.FullName).Selected("--Select Purchaser--").Class("chzn-select")                    
+                    @Html.Select("PurchaserId", o => o.Options(Model.PurchaserPeeps, x => x.Id, x => x.FullName).Selected("--Select Purchaser--").Class("chzn-select"))                    
                 </div>
             </li>
             <li>				
