--- a/Purchasing.Mvc/Views/Workgroup/_WorkgroupForm.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/_WorkgroupForm.cshtml
@@ -16,7 +16,7 @@
     </div>
     <div class="editor-field">
         @*@Html.DropDownListFor(x => x.Workgroup.PrimaryOrganization, new SelectList(Model.Organizations, "Value", "Text"))*@
-        @this.Select("Workgroup.PrimaryOrganization").Options(Model.Organizations, x => x.Value, x => x.Text).Selected(Model.Workgroup.PrimaryOrganization == null ? string.Empty : Model.Workgroup.PrimaryOrganization.Id).Class("chzn-select")
+        @Html.Select("Workgroup.PrimaryOrganization", o => o.Options(Model.Organizations, x => x.Value, x => x.Text).Selected(Model.Workgroup.PrimaryOrganization == null ? string.Empty : Model.Workgroup.PrimaryOrganization.Id).Class("chzn-select"))
         @Html.ValidationMessageFor(x => x.Workgroup.PrimaryOrganization)
     </div>
 </li>
