--- a/Purchasing.Mvc/Views/Order/Copy.cshtml
+++ b/Purchasing.Mvc/Views/Order/Copy.cshtml
@@ -29,7 +29,7 @@
 @Html.Partial("_SideNavigation")
 
 <div class="orders-right">
-@using (Html.BeginForm("Copy", "Order", new { Model.Order.Id }, FormMethod.Post, new { id = "order-form" }))
+@using (Html.BeginForm("Copy", "Order", new { Model.Order.Id }, FormMethod.Post, true, new { id = "order-form" }))
 {
     <input data-bind="value: adjustRouting" id="adjustRouting" name="adjustRouting" type="hidden" />
 
