--- a/Purchasing.Mvc/Views/Order/Request.cshtml
+++ b/Purchasing.Mvc/Views/Order/Request.cshtml
@@ -32,7 +32,7 @@
 @Html.Partial("_SideNavigation")
 
 <div class="orders-right">
-@using (Html.BeginForm("Request", "Order", new { Model.Workgroup.Id }, FormMethod.Post, new { id = "order-form" }))
+@using (Html.BeginForm("Request", "Order", new { Model.Workgroup.Id }, FormMethod.Post, true, new { id = "order-form" }))
 {
     @Html.Partial("_OrderForm")
 }
