--- a/Purchasing.Mvc/Views/AutoApproval/Details.cshtml
+++ b/Purchasing.Mvc/Views/AutoApproval/Details.cshtml
@@ -22,7 +22,7 @@
     <header class="ui-corner-top ui-widget-header">Auto Approval</header>
 	<ul>
         
-    @Html.Partial("_AutoApprovalDetails")
+    @await Html.PartialAsync("_AutoApprovalDetails")
 
 	</ul>
 
