--- a/Purchasing.Mvc/Views/Order/_OrderDialogs.cshtml
+++ b/Purchasing.Mvc/Views/Order/_OrderDialogs.cshtml
@@ -1,13 +1,13 @@
 ﻿@model OrderModifyModel
 
-@Html.Partial("_VendorDialog")
+@await Html.PartialAsync("_VendorDialog")
 
-@Html.Partial("_VendorSearchDialog")
+@await Html.PartialAsync("_VendorSearchDialog")
 
-@Html.Partial("_ShippingAddressDialog")
+@await Html.PartialAsync("_ShippingAddressDialog")
 
-@Html.Partial("_CalculatorDialog")
+@await Html.PartialAsync("_CalculatorDialog")
 
-@Html.Partial("_AccountSearchDialog")
+@await Html.PartialAsync("_AccountSearchDialog")
 
-@Html.Partial("_OrderSaveDialog")
+@await Html.PartialAsync("_OrderSaveDialog")
