--- a/Purchasing.Mvc/Views/Workgroup/Create.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Create.cshtml
@@ -64,7 +64,7 @@
 			</div>
 
 			<ul>
-				@Html.Partial("_WorkgroupForm")
+				@await Html.PartialAsync("_WorkgroupForm")
 				<li>
 					@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
 					<div class="editor-label">&nbsp;</div>
