--- a/Purchasing.Mvc/Views/Workgroup/DeleteAddress.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/DeleteAddress.cshtml
@@ -22,7 +22,7 @@
 <section class="display-form ui-corner-all">
 	<header class="ui-corner-top ui-widget-header">Workgroup Address</header>
 	<ul>
-		@Html.Partial("_AddressDetails")
+		@await Html.PartialAsync("_AddressDetails")
 				
 		<li>
 			@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
