--- a/Purchasing.Mvc/Views/Admin/RemoveAdmin.cshtml
+++ b/Purchasing.Mvc/Views/Admin/RemoveAdmin.cshtml
@@ -7,7 +7,7 @@
 <h3>Are you sure you want to remove @Model.FullNameAndId from the Admin role?</h3>
 
 @using (Html.BeginForm("RemoveAdminRole", "Admin", new { id = Model.Id})) {
-    @Html.Partial("_RemoveUserForm")
+    @await Html.PartialAsync("_RemoveUserForm")
 }
 
 
