--- a/Purchasing.Mvc/Views/Admin/RemoveDepartmental.cshtml
+++ b/Purchasing.Mvc/Views/Admin/RemoveDepartmental.cshtml
@@ -7,7 +7,7 @@
 <h3>Are you sure you want to remove @Model.FullNameAndId from the Departmental Admin role?</h3>
 
 @using (Html.BeginForm("RemoveDepartmentalRole", "Admin", new { id = Model.Id })) {
-	@Html.Partial("_RemoveUserForm")
+	@await Html.PartialAsync("_RemoveUserForm")
 }
 
 
