--- a/Purchasing.Mvc/Views/AutoApproval/Delete.cshtml
+++ b/Purchasing.Mvc/Views/AutoApproval/Delete.cshtml
@@ -23,7 +23,7 @@
 	<header class="ui-corner-top ui-widget-header">Auto Approval</header>
 	<ul>
 
-        @Html.Partial("_AutoApprovalDetails")
+        @await Html.PartialAsync("_AutoApprovalDetails")
 		
 		<li>
 			@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
