--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -44,7 +44,7 @@
     @Html.HiddenFor(x => x.DepartmentalAdminRequest.LastName)
     @Html.HiddenFor(x => x.DepartmentalAdminRequest.Email)
 
-    @Html.Partial("_daRequest")
+    @await Html.PartialAsync("_daRequest")
 }
 
 <section class="display-form">
