--- a/Purchasing.Mvc/Views/History/AccountsPayableOrders.cshtml
+++ b/Purchasing.Mvc/Views/History/AccountsPayableOrders.cshtml
@@ -167,9 +167,9 @@
     </script>
 }
 
-@Html.Partial("_OrderFilter", Model)
+@await Html.PartialAsync("_OrderFilter", Model)
 
-@Html.Partial("_OrdersTable", Model)
+@await Html.PartialAsync("_OrdersTable", Model)
 
-@Html.Partial("_PeepsDialog")
+@await Html.PartialAsync("_PeepsDialog")
 
