--- a/Purchasing.Mvc/Views/Wizard/AddAddresses.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/AddAddresses.cshtml
@@ -53,7 +53,7 @@
 
 
 
-@Html.Partial("_StatusBar", Model.Workgroup.Id) 
+@await Html.PartialAsync("_StatusBar", Model.Workgroup.Id) 
      
      @{
          var helpText = "To add a shipping enter the fields below.</br></br>When an order is placed, only the name will be displayed to the requester.";
@@ -63,7 +63,7 @@
 @using (Html.BeginForm()) {
 	@Html.AntiForgeryToken()
 	@Html.ValidationSummary(true)
-    @Html.Partial("_Navigation")
+    @await Html.PartialAsync("_Navigation")
 <section class="ui-corner-all">
 @* Legend is required if you have more than one widget/unit to help the user understand what is being asked of them.
 Example: Dinosaur 1  *@
@@ -176,7 +176,7 @@ Example: Dinosaur 1  *@
 
 
 </section>
-    @Html.Partial("_Navigation")
+    @await Html.PartialAsync("_Navigation")
 }
 
 
