--- a/Purchasing.Mvc/Views/Wizard/Addresses.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/Addresses.cshtml
@@ -11,8 +11,8 @@
 }
 
 
-	@Html.Partial("_StatusBar", Model.Workgroup.Id)
-    @Html.Partial("_Navigation")
+	@await Html.PartialAsync("_StatusBar", Model.Workgroup.Id)
+    @await Html.PartialAsync("_Navigation")
     <nav class="col2">
         <ul class='navigation'>
             <li>
@@ -94,7 +94,7 @@
 }
 	</tbody>
 </table>
-@Html.Partial("_Navigation")
+@await Html.PartialAsync("_Navigation")
 
 
 
