--- a/Purchasing.Mvc/Views/Wizard/CreateWorkgroup.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/CreateWorkgroup.cshtml
@@ -24,13 +24,13 @@
     </script>
 }
 
-@Html.Partial("_StatusBar", 0)  
+@await Html.PartialAsync("_StatusBar", 0)  
     
 @using (Html.BeginForm())
 {
 	@Html.AntiForgeryToken()
 	@Html.ValidationSummary(true)
-    @Html.Partial("_Navigation") <a href="#" id="help-workgroup" class="ui-icon ui-icon-help showTip" style="margin-top: -78px; margin-left: 0px; margin-right: 97px;" title="<strong>Navigation bar</strong> - contains links for each step, though Create Workgroup must be completed first for subsequent steps to function properly. "></a>
+    @await Html.PartialAsync("_Navigation") <a href="#" id="help-workgroup" class="ui-icon ui-icon-help showTip" style="margin-top: -78px; margin-left: 0px; margin-right: 97px;" title="<strong>Navigation bar</strong> - contains links for each step, though Create Workgroup must be completed first for subsequent steps to function properly. "></a>
     <section>
     
         <header class="ui-corner-all ui-widget-header">Workgroup <a href="#" id="help-workgroup" class="ui-icon ui-icon-help showTip" title="This is the first step in creating new a new workgroup. You must complete this step before adding anything to the workgroup."></a></header>
@@ -43,7 +43,7 @@
 
 
             <ul>
-                @Html.Partial("_CommonWorkgroupForm")
+                @await Html.PartialAsync("_CommonWorkgroupForm")
     
                 <li>
                     <div class="editor-label required">
@@ -59,5 +59,5 @@
         </div>
 
     </section>
-    @Html.Partial("_Navigation")
+    @await Html.PartialAsync("_Navigation")
 }
