--- a/Purchasing.Mvc/Views/Wizard/Details.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/Details.cshtml
@@ -49,22 +49,22 @@
 
 <section class="display-form ui-corner-all">
     <header class="ui-corner-top ui-widget-header">Organization(s)</header>
-    @Html.Partial("_SubOrganizations", Model.Workgroup.Organizations)
+    @await Html.PartialAsync("_SubOrganizations", Model.Workgroup.Organizations)
 </section>
 
 <section class="display-form ui-corner-all">
     <header class="ui-corner-top ui-widget-header">People</header>
-    @Html.Partial("_PeopleTable", Model.UserRoles)
+    @await Html.PartialAsync("_PeopleTable", Model.UserRoles)
 </section>
 
 <section class="display-form ui-corner-all">
     <header class="ui-corner-top ui-widget-header">Accounts</header>
-    @Html.Partial("_AccountsTable", Model.Workgroup.Accounts)
+    @await Html.PartialAsync("_AccountsTable", Model.Workgroup.Accounts)
 </section>
 
 <section class="display-form ui-corner-all">
     <header class="ui-corner-top ui-widget-header">Vendors</header>
-    @Html.Partial("_VendorTable", Model.Workgroup.Vendors)
+    @await Html.PartialAsync("_VendorTable", Model.Workgroup.Vendors)
 </section>
 
 
