--- a/Purchasing.Mvc/Views/Wizard/SubOrganizations.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/SubOrganizations.cshtml
@@ -10,8 +10,8 @@
     ViewBag.IsAccountSync = Model.SyncAccounts;
 }
 
-	@Html.Partial("_StatusBar", Model.Id) 
-	@Html.Partial("_Navigation")
+	@await Html.PartialAsync("_StatusBar", Model.Id) 
+	@await Html.PartialAsync("_Navigation")
     <nav class="col2">
         <ul class='navigation'>
             <li>
@@ -26,6 +26,6 @@
     </nav>
 
 
-@Html.Partial("_SubOrganizations", Model.Organizations)
+@await Html.PartialAsync("_SubOrganizations", Model.Organizations)
 
-@Html.Partial("_Navigation")
+@await Html.PartialAsync("_Navigation")
