--- a/Purchasing.Mvc/Views/Workgroup/AddressDetails.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/AddressDetails.cshtml
@@ -16,7 +16,7 @@
 <section class="display-form ui-corner-all">
     <header class="ui-corner-top ui-widget-header">Workgroup Address</header>
 	<ul>
-		@Html.Partial("_AddressDetails")
+		@await Html.PartialAsync("_AddressDetails")
 	</ul>
 
 
